# zkevm-circuits

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  ZKWORLD  go.work  go.work.sum  tx_circuit_l1_msg_tx
.cargo/: config.toml
.github/: pull_request_template.md
.github/ciChecksScripts/: wakeUpRunner.sh
.github/proverCiScripts/: wakeUpProver.sh
.github/workflows/: ci.yml  (+5 more)
aggregator/: Cargo.toml  README.md  aggregator.dio  build.rs  tests.sh
aggregator/configs/: aggregation.config  bundle_circuit.config  compression_thin.config  compression_wide.config
aggregator/data/: failed_roundtrip
aggregator/data/24561/: layer_0.pkey
aggregator/data/68147/: layer_0.pkey
aggregator/data/json-dump/: snark.json  trace.json  trace2.json
aggregator/data/test_batches/: batch274.hex
aggregator/data/test_blobs/: blob005.hex
aggregator/src/: aggregation.rs  barycentric.rs  batch.rs  blob.rs  blob_consistency.rs  chunk.rs  constants.rs  core.rs  data_availability.rs  eip4844.rs  lib.rs  mock_chunk.rs  param.rs  proof_aggregation.rs  public_input_aggregation.rs  recursion.rs  rlc.rs  tests.rs  util.rs
aggregator/src/aggregation/: barycentric.rs  batch_data.rs  blob_data.rs  circuit.rs  circuit_ext.rs  config.rs  decoder.rs  dynamic.rs  util.rs
aggregator/src/aggregation/decoder/: seq_exec.rs  tables.rs  witgen.rs
aggregator/src/aggregation/decoder/tables/: bitstring.rs  bitstring_accumulation.rs  fixed.rs  fse.rs  literals_header.rs  rom_fse_order.rs  rom_tag.rs  seqinst_table.rs
aggregator/src/aggregation/decoder/tables/fixed/: fse_table_transition.rs  predefined_fse.rs  seq_code_to_value.rs  seq_data_interleaved_order.rs  seq_tag_order.rs  tag_transition.rs  variable_bit_packing.rs
aggregator/src/aggregation/decoder/witgen/: fse.rs  params.rs  sequence.rs  types.rs  util.rs
aggregator/src/aggregation/rlc/: config.rs  gates.rs
aggregator/src/blob_consistency/: avail.rs  blob_data.rs  eip4844.rs
aggregator/src/blob_consistency/eip4844/: barycentric.rs  blob.rs  tests.rs
aggregator/src/chunk/: dummy_chunk_circuit.rs  dummy_circuit.rs  dummy_circuit_ext.rs
aggregator/src/compression/: circuit.rs  circuit_ext.rs  config.rs
aggregator/src/config/: mod.rs
aggregator/src/data_availability/: avail.rs  blob_data.rs  eip4844.rs
aggregator/src/data_availability/eip4844/: barycentric.rs  blob.rs  blob_data.rs  tests.rs
aggregator/src/proof_aggregation/: circuit.rs  circuit_ext.rs  config.rs  public_input_aggregation.rs
aggregator/src/proof_aggregation/public_input_aggregation/: circuit.rs  circuit_ext.rs  config.rs
aggregator/src/proof_compression/: circuit.rs  config.rs
aggregator/src/public_input_aggregation/: circuit_ext.rs  config.rs  sub_circuit.rs  tests.rs
aggregator/src/recursion/: circuit.rs  common.rs  config.rs  util.rs
aggregator/src/rlc/: config.rs  gates.rs  util.rs
aggregator/src/tests/: aggregation.rs  aggregator_e2e.rs  bitstring.rs  blob.rs  compression.rs  dummy_chunk.rs  fse.rs  literals_header.rs  mock_chunk.rs  proof_aggregation.rs  proof_compression.rs  public_input_aggregation.rs  recursion.rs  rlc.rs
aggregator/src/tests/mock_chunk/: circuit.rs  circuit_ext.rs  config.rs
aggregator/src/tests/rlc/: dynamic_hashes.rs  gates.rs  hashes.rs
bus-mapping/: Cargo.toml  README.md
circuit-benchmarks/: Cargo.toml  build.rs
compression/: Cargo.toml
compression/configs/: compression_thin.config  compression_wide.config
compression/data/: run0_layer0.json  run0_layer1.json  run0_log  run1_layer0.json  run1_layer1.json  run1_layer1_protocol.json  run1_log  run2_layer0.json  run2_layer1.json  run2_log  run3_layer1.json  run3_log  run4_layer0_protocol.json  run4_layer1.json  run4_log
compression/src/: circuit.rs  circuit_ext.rs  config.rs  constants.rs  lib.rs  params.rs  tests.rs  util.rs  utils.rs
docs/: Bytecode_Circuit.md  EIP2930_1559.md  EVM_Circuit.md  Keccak_Circuit.md  MCOPY.md  MPT_Circuit.md  Modexp_Circuit.md  Public_Input_Circuit.md  Sig_Circuit.md  State_Circuit.md  Tx_Circuit.md
eth-types/: Cargo.toml
eth-types/src/: bytecode.rs  constants.rs  error.rs  evm_types.rs  forks.rs  geth_types.rs  l2_predeployed.rs  l2_types.rs  lib.rs  sign_types.rs  state_db.rs  utils.rs
eth-types/src/data/traces/: 5224657.json
eth-types/src/evm_types/: block_utils.rs  gas_utils.rs  memory.rs  opcode_ids.rs  opcode_ids.rs.orig  stack.rs  storage.rs  transient_storage.rs
eth-types/src/l2_types/: trace.rs
eth-types/src/state_db/: l2.rs
eth-types/src/utils/: codehash.rs
gadgets/: Cargo.toml
gadgets/src/: batched_is_zero.rs  binary_number.rs  comparator.rs  comparison.rs  evm_word.rs  is_equal.rs  is_zero.rs  less_than.rs  lib.rs  monotone.rs  mul_add.rs  range.rs  util.rs
geth-utils/: Cargo.toml  build.rs  go.mod
geth-utils/gethutil/: trace.go
geth-utils/l1geth/: go.mod  go.sum  trace.go
geth-utils/l2geth/: .gitignore  go.mod  go.sum  lib.go  trace.go
geth-utils/src/: lib.rs
integration-tests/: Cargo.toml
keccak256/: Cargo.toml
mock/: Cargo.toml
prover/: Cargo.toml
prover2/: Cargo.toml  Makefile
prover2/scripts/: download_setup.sh  setup_test_data.sh
prover2/src/: error.rs  lib.rs  util.rs
prover2/src/prover/: config.rs  mod.rs  params.rs
prover2/src/types/: layer.rs  mod.rs  proof.rs  task.rs
prover2/src/util/: dir.rs  env.rs  fs.rs  io.rs  mod.rs  serde.rs
recursion/: Cargo.toml
recursion/src/: circuit.rs  common.rs  config.rs  lib.rs  types.rs  util.rs
sha256/: Cargo.toml  README.md
sha256/benches/: .gitignore  sha256.rs
sha256/src/: circuit.rs  lib.rs  table16.rs
sha256/src/table16/: compression.rs  message_schedule.rs  spread_table.rs
sha256/src/table16/compression/: compression_gates.rs  compression_util.rs  subregion_digest.rs  subregion_initial.rs  subregion_main.rs
sha256/src/table16/message_schedule/: schedule_util.rs  subregion1.rs  subregion2.rs  subregion3.rs
testool/: Cargo.toml  Config.toml  README.md  codehash.txt  run.sh
tracers/: Cargo.toml  README.md
types/: Cargo.toml  README.md
zkevm-circuits/: Cargo.toml
zktrie/: Cargo.toml
(+525 files in other folders)
