[workspace]
members = [
    "zkevm-circuits",
    "bus-mapping",
    "geth-utils",
    "zktrie",
    "gadgets",
    "integration-tests",
    "circuit-benchmarks",
    "eth-types",
    "external-tracer",
    "mock",
    "testool",
    "aggregator",
    "prover"
]
resolver = "2"

[workspace.package]
version = "0.12.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = "1.0"
ark-std = "0.3"
base64 = "0.13.0"
bincode = "1"
ctor = "0.1"
env_logger = "0.10"
ethers-core = { git = "https://github.com/scroll-tech/ethers-rs.git", branch = "feat/rkyv", features = ["rkyv", "scroll"] }
ethers-providers = { git = "https://github.com/scroll-tech/ethers-rs.git", branch = "feat/rkyv" }
ethers = { git = "https://github.com/scroll-tech/ethers-rs.git", branch = "feat/rkyv" }
ethers-signers  = { git = "https://github.com/scroll-tech/ethers-rs.git", branch = "feat/rkyv" }
ff = "0.13"
halo2_proofs = { git = "https://github.com/scroll-tech/halo2.git", branch = "v1.1" }
halo2curves = { version = "0.1.0", features = [ "derive_serde" ] }
poseidon-base = { package = "poseidon-base", git = "https://github.com/scroll-tech/poseidon-circuit.git", branch = "main" }
hash-circuit = { package = "poseidon-circuit", git = "https://github.com/scroll-tech/poseidon-circuit.git", branch = "main" }
halo2-base = { git = "https://github.com/scroll-tech/halo2-lib", branch = "develop", default-features=false, features=["halo2-pse","display"] }
halo2-ecc = { git = "https://github.com/scroll-tech/halo2-lib", branch = "develop", default-features=false, features=["halo2-pse","display"] }
hex = "0.4"
itertools = "0.11"
libsecp256k1 = "0.7"
log = "0.4"
num = "0.4"
num-bigint = "0.4"
num-traits = "0.2"
pretty_assertions = "1.0"
once_cell = "1.17"
rand = "0.8"
rand_chacha = "0.3"
rand_xorshift = "0.3"
rayon = "1.5"
regex = "1.5"
rkyv = { version = "0.7.44", features = ["validation"] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_stacker = "0.1"
sha3 = "0.10"
snark-verifier = { git = "https://github.com/scroll-tech/snark-verifier", branch = "develop" }
snark-verifier-sdk = { git = "https://github.com/scroll-tech/snark-verifier", branch = "develop", default-features = false, features = ["loader_halo2", "loader_evm", "halo2-pse"] }
strum = "0.25"
strum_macros = "0.25"
subtle = "2.4"
tokio = { version = "1.13", features = ["macros", "rt-multi-thread"] }
url = "2.2"
revm-precompile = { git = "https://github.com/scroll-tech/revm", branch = "scroll-evm-executor/v40", default-features = false, features = ["std"] } # v40
revm-primitives = { git = "https://github.com/scroll-tech/revm", branch = "scroll-evm-executor/v40", default-features = false, features = ["std"] } # v40
c-kzg = "1.0.2"
primitive-types = { git = "https://github.com/scroll-tech/parity-common.git", branch = "feat/rkyv", features = ["rkyv"] }
ethereum-types = { git = "https://github.com/scroll-tech/parity-common.git", branch = "feat/rkyv", features = ["rkyv"] }

# for local development
#ethers-core = { path = "../ethers-rs/ethers-core", features = ["rkyv", "scroll"] }
#ethers-providers = { path = "../ethers-rs/ethers-providers" }
#ethers = { path = "../ethers-rs/ethers" }
#ethers-signers  = { path = "../ethers-rs/ethers-signers" }
#primitive-types = { path = "../parity-common/primitive-types", features = ["rkyv"] }
#ethereum-types = { path = "../parity-common/ethereum-types", features = ["rkyv"] }
#snark-verifier = { path = "../snark-verifier/snark-verifier" }
#snark-verifier-sdk = { path = "../snark-verifier/snark-verifier-sdk", default-features = false, features = ["loader_halo2", "loader_evm", "halo2-pse"] }


[patch.crates-io]
ethers-core = { git = "https://github.com/scroll-tech/ethers-rs.git", branch = "feat/rkyv" }
ethers-providers = { git = "https://github.com/scroll-tech/ethers-rs.git", branch = "feat/rkyv" }
ethers = { git = "https://github.com/scroll-tech/ethers-rs.git", branch = "feat/rkyv" }
ethers-etherscan = { git = "https://github.com/scroll-tech/ethers-rs.git", branch = "feat/rkyv" }
ethers-signers  = { git = "https://github.com/scroll-tech/ethers-rs.git", branch = "feat/rkyv" }
gobuild = { git = "https://github.com/scroll-tech/gobuild.git" }
halo2curves = { git = "https://github.com/scroll-tech/halo2curves", branch = "v0.1.0" }
primitive-types = { git = "https://github.com/scroll-tech/parity-common.git", branch = "feat/rkyv" }
ethereum-types = { git = "https://github.com/scroll-tech/parity-common.git", branch = "feat/rkyv" }

# for local development
#ethers-core = { path = "../ethers-rs/ethers-core" }
#ethers-providers = { path = "../ethers-rs/ethers-providers" }
#ethers = { path = "../ethers-rs/ethers" }
#ethers-etherscan = { path = "../ethers-rs/ethers-etherscan" }
#ethers-signers  = { path = "../ethers-rs/ethers-signers" }
#primitive-types = { path = "../parity-common/primitive-types" }
#ethereum-types = { path = "../parity-common/ethereum-types" }


[patch."https://github.com/privacy-scaling-explorations/halo2.git"]
halo2_proofs = { git = "https://github.com/scroll-tech/halo2.git", branch = "v1.1" }
[patch."https://github.com/privacy-scaling-explorations/poseidon.git"]
poseidon = { git = "https://github.com/scroll-tech/poseidon.git", branch = "main" }

[patch."https://github.com/privacy-scaling-explorations/bls12_381"]
bls12_381 = { git = "https://github.com/scroll-tech/bls12_381", branch = "feat/impl_scalar_field" }


# Definition of benchmarks profile to use.
[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
rpath = false
lto = "thin"
incremental = true

[profile.release]
opt-level = 3
debug = false
debug-assertions = true
overflow-checks = true
rpath = false
lto = "thin"
incremental = true
