[package]
name = "eth-types"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ethers-core.workspace = true
ethers-signers.workspace = true
hex.workspace = true
halo2curves = { workspace = true, optional = true }
log.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with = "3.9"
uint = "0.9.1"
itertools.workspace = true
subtle.workspace = true
sha3.workspace = true
num.workspace = true
num-bigint.workspace = true
strum_macros.workspace = true
strum.workspace = true
poseidon-bn254.workspace = true
base64.workspace = true
revm-precompile.workspace = true
revm-primitives.workspace = true
rkyv.workspace = true
primitive-types.workspace = true
ethereum-types.workspace = true

[dev-dependencies]
bincode.workspace = true

[features]
default = ["warn-unimplemented", "secp256k1", "poseidon-bn254/halo2curves_v1"]
warn-unimplemented = []
secp256k1 = ["halo2curves"]
poseidon-bn254 = ["poseidon-bn254/halo2curves_v1"]
scroll = ["revm-precompile/scroll", "revm-primitives/scroll"]

# trace heap allocation related feature switches
enable-stack = []
enable-memory = []
enable-storage = []
