[package]
name = "gadgets"
version = "0.1.0"
edition = "2021"
authors = ["The appliedzkp team"]

[dependencies]
ff = "0.11"
halo2_proofs = { git = "https://github.com/scroll-tech/halo2.git", rev = "a49778f5" }
pairing = { git = 'https://github.com/appliedzkp/pairing', package = "pairing_bn256" }
sha3 = "0.7.2"
eth-types = { path = "../eth-types" }
digest = "0.7.6"

[dev-dependencies]
rand_xorshift = "0.3"
rand = "0.8"
