[package]
name = "gadgets"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
halo2_proofs.workspace = true
sha3.workspace = true
eth-types = { path = "../eth-types" }
strum.workspace = true
poseidon-bn254 = { workspace = true, features = ["halo2curves_v1"] }
hash-circuit.workspace = true

[dev-dependencies]
rand_xorshift.workspace = true
rand.workspace = true
