[package]
name = "gadgets"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
halo2_proofs.workspace = true
sha3.workspace = true
eth-types = { path = "../eth-types" }
strum.workspace = true
poseidon-base.workspace = true

[dev-dependencies]
rand_xorshift.workspace = true
rand.workspace = true

[features]
default = ["halo2_proofs/circuit-params"]
