[package]
name = "geth-utils"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[build-dependencies]
# TODO: replace with scroll repository.
# gobuild = { git = "https://github.com/scroll-tech/gobuild.git" }
gobuild = { git = "https://github.com/silathdiir/gobuild.git", branch = "add-modfile-arg" }
log = "0.4.14"
env_logger = "0.9"

[features]
default = []
scroll = []
