[package]
name = "prover2"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aggregator = { path = "../aggregator" }
eth-types = { path = "../eth-types" }
gadgets = { path = "../gadgets" }
zkevm-circuits = { path = "../zkevm-circuits" }

anyhow.workspace = true
base64.workspace = true
ethers-core.workspace = true
halo2_proofs.workspace = true
once_cell.workspace = true
rand.workspace = true
rand_xorshift.workspace = true
serde.workspace = true
serde_json.workspace = true
snark-verifier.workspace = true
snark-verifier-sdk.workspace = true

git-version = "0.3.5"
thiserror = "1.0"
tracing = "0.1"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter", "std"] }
