[package]
name = "recursion"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aggregator = { path = "../aggregator" }

log.workspace = true
itertools.workspace = true
serde_json.workspace = true
rand.workspace = true
halo2-base.workspace = true
snark-verifier.workspace = true
snark-verifier-sdk.workspace = true
ce-snark-verifier-sdk.workspace = true
